auth
auth confimation logic
